// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildCreateSubscriptionRequest builds request with applied promotion 1`] = `
{
  "description": "Created by createSubscription.ts in support-service-lambdas",
  "newAccount": {
    "autoPay": true,
    "billCycleDay": 0,
    "billToContact": {
      "country": "GB",
      "firstName": "A",
      "lastName": "B",
      "workEmail": "test@test.com",
    },
    "crmId": "sf-acc-1",
    "currency": "GBP",
    "customFields": {
      "CreatedRequestId__c": "request-123",
      "IdentityId__c": "id-1",
      "sfContactId__c": "sf-con-1",
    },
    "name": "Test Account",
    "paymentGateway": "Stripe PaymentIntents GNM Membership",
    "paymentMethod": {
      "cardNumber": "42424242424242",
      "cardType": "Visa",
      "expirationMonth": 12,
      "expirationYear": 2099,
      "secondTokenId": "test_second_token_id",
      "tokenId": "test_token_id",
      "type": "CreditCardReferenceTransaction",
    },
    "soldToContact": undefined,
  },
  "orderDate": "2025-09-17",
  "processingOptions": {
    "collectPayment": true,
    "runBilling": true,
  },
  "subscriptions": [
    {
      "customFields": {
        "DeliveryAgent__c": "",
        "ReaderType__c": "Direct",
      },
      "orderActions": [
        {
          "createSubscription": {
            "subscribeToRatePlans": [
              {
                "chargeOverrides": [
                  {
                    "pricing": {
                      "recurringFlatFee": {
                        "listPrice": 0,
                      },
                    },
                    "productRatePlanChargeId": "8ad09ea0858682bb0185880ac57f4c4c",
                  },
                ],
                "productRatePlanId": "8ad08cbd8586721c01858804e3275376",
              },
              {
                "chargeOverrides": [
                  {
                    "endDate": {
                      "endDateCondition": "Fixed_Period",
                      "upToPeriods": 3,
                      "upToPeriodsType": "Months",
                    },
                    "pricing": {
                      "discount": {
                        "discountPercentage": 10,
                      },
                    },
                    "productRatePlanChargeId": "2c92c0f957220b5d0157299c97a60bbd",
                  },
                ],
                "productRatePlanId": "2c92c0f85721ff7c01572942235b6d7a",
              },
            ],
            "terms": {
              "autoRenew": true,
              "initialTerm": {
                "period": 12,
                "periodType": "Month",
                "termType": "TERMED",
              },
              "renewalSetting": "RENEW_WITH_SPECIFIC_TERM",
              "renewalTerms": [
                {
                  "period": 12,
                  "periodType": "Month",
                },
              ],
            },
          },
          "triggerDates": [
            {
              "name": "ContractEffective",
              "triggerDate": "2025-09-01",
            },
            {
              "name": "CustomerAcceptance",
              "triggerDate": "2025-09-05",
            },
          ],
          "type": "CreateSubscription",
        },
      ],
    },
  ],
}
`;

exports[`buildCreateSubscriptionRequest builds request with gift recipient 1`] = `
{
  "description": "Created by createSubscription.ts in support-service-lambdas",
  "newAccount": {
    "autoPay": true,
    "billCycleDay": 0,
    "billToContact": {
      "country": "GB",
      "firstName": "A",
      "lastName": "B",
      "workEmail": "test@test.com",
    },
    "crmId": "sf-acc-1",
    "currency": "GBP",
    "customFields": {
      "CreatedRequestId__c": "request-123",
      "IdentityId__c": "id-1",
      "sfContactId__c": "sf-con-1",
    },
    "name": "Test Account",
    "paymentGateway": "Stripe PaymentIntents GNM Membership",
    "paymentMethod": {
      "cardNumber": "42424242424242",
      "cardType": "Visa",
      "expirationMonth": 12,
      "expirationYear": 2099,
      "secondTokenId": "test_second_token_id",
      "tokenId": "test_token_id",
      "type": "CreditCardReferenceTransaction",
    },
    "soldToContact": {
      "SpecialDeliveryInstructions__c": undefined,
      "address1": "90 York Way",
      "city": "London",
      "country": "GB",
      "firstName": "G",
      "lastName": "W",
      "postalCode": "N19GU",
      "workEmail": "test@test.com",
    },
  },
  "orderDate": "2025-09-17",
  "processingOptions": {
    "collectPayment": true,
    "runBilling": true,
  },
  "subscriptions": [
    {
      "customFields": {
        "DeliveryAgent__c": "",
        "ReaderType__c": "Gift",
      },
      "orderActions": [
        {
          "createSubscription": {
            "subscribeToRatePlans": [
              {
                "chargeOverrides": [],
                "productRatePlanId": "2c92c0f867cae0700167eff921734f7b",
              },
            ],
            "terms": {
              "autoRenew": false,
              "initialTerm": {
                "period": 369,
                "periodType": "Day",
                "termType": "TERMED",
              },
              "renewalSetting": "RENEW_WITH_SPECIFIC_TERM",
              "renewalTerms": [
                {
                  "period": 12,
                  "periodType": "Month",
                },
              ],
            },
          },
          "triggerDates": [
            {
              "name": "ContractEffective",
              "triggerDate": "2025-09-01",
            },
            {
              "name": "CustomerAcceptance",
              "triggerDate": "2025-09-05",
            },
          ],
          "type": "CreateSubscription",
        },
      ],
    },
  ],
}
`;

exports[`buildCreateSubscriptionRequest builds request without promotion or gift 1`] = `
{
  "description": "Created by createSubscription.ts in support-service-lambdas",
  "newAccount": {
    "autoPay": true,
    "billCycleDay": 0,
    "billToContact": {
      "country": "GB",
      "firstName": "A",
      "lastName": "B",
      "workEmail": "test@test.com",
    },
    "crmId": "sf-acc-1",
    "currency": "GBP",
    "customFields": {
      "CreatedRequestId__c": "request-123",
      "IdentityId__c": "id-1",
      "sfContactId__c": "sf-con-1",
    },
    "name": "Test Account",
    "paymentGateway": "Stripe PaymentIntents GNM Membership",
    "paymentMethod": {
      "cardNumber": "42424242424242",
      "cardType": "Visa",
      "expirationMonth": 12,
      "expirationYear": 2099,
      "secondTokenId": "test_second_token_id",
      "tokenId": "test_token_id",
      "type": "CreditCardReferenceTransaction",
    },
    "soldToContact": undefined,
  },
  "orderDate": "2025-09-17",
  "processingOptions": {
    "collectPayment": true,
    "runBilling": true,
  },
  "subscriptions": [
    {
      "customFields": {
        "DeliveryAgent__c": "",
        "ReaderType__c": "Direct",
      },
      "orderActions": [
        {
          "createSubscription": {
            "subscribeToRatePlans": [
              {
                "chargeOverrides": [
                  {
                    "pricing": {
                      "recurringFlatFee": {
                        "listPrice": 0,
                      },
                    },
                    "productRatePlanChargeId": "8ad09ea0858682bb0185880ac57f4c4c",
                  },
                ],
                "productRatePlanId": "8ad08cbd8586721c01858804e3275376",
              },
            ],
            "terms": {
              "autoRenew": true,
              "initialTerm": {
                "period": 12,
                "periodType": "Month",
                "termType": "TERMED",
              },
              "renewalSetting": "RENEW_WITH_SPECIFIC_TERM",
              "renewalTerms": [
                {
                  "period": 12,
                  "periodType": "Month",
                },
              ],
            },
          },
          "triggerDates": [
            {
              "name": "ContractEffective",
              "triggerDate": "2025-09-01",
            },
            {
              "name": "CustomerAcceptance",
              "triggerDate": "2025-09-05",
            },
          ],
          "type": "CreateSubscription",
        },
      ],
    },
  ],
}
`;
